# DeepROS-Platform

./: .gitignore  README.md  alembic.ini  env.example  pyproject.toml
alembic/: env.py
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py
app/api/v1/: node_connections.py  node_messages.py  nodes.py  ros_domains.py
app/crud/: __init__.py  base.py  node.py  node_connection.py  node_message.py  ros_domain.py
app/models/: __init__.py  node.py  node_connection.py  node_message.py  ros_domain.py
app/schemas/: __init__.py  node.py  node_connection.py  node_message.py  ros_domain.py
broker/: README.md  config.py  main.py  test_broker.py
broker/core/: __init__.py  broker.py  protocol.py  session_manager.py  topic_manager.py
broker/models/: __init__.py  client.py  message.py  subscription.py  topic.py
data/: README.md  USAGE.md  config.py  database.py  demo.py  main.py  test_data.py
data/core/: __init__.py  compressor.py  indexer.py  player.py  recorder.py  validator.py
data/models/: __init__.py  message_index.py  recording_session.py  ros_message.py  topic_info.py
scripts/: 001-create-tables.sql  002-insert-sample-data.sql  003-create-indexes-and-views.sql
tests/: conftest.py  test_api.py
